fix dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,9 @@ Use it to make something cool, have fun, and share what you've learned with othe
 	--blue: #12ABF6;
 }
 
-body{min-height: 100vh; font-family: Montreal, sans-serif; overflow-x: hidden;}
+body{min-height: 100vh; font-family: Montreal, sans-serif; overflow-x: hidden; background-color: #ececec; transition: 0.3s}
 section{ max-width: 1600px; margin: 0 auto; padding: 10vw 5vw;}
-h1, h2, h3, h4{margin-bottom: 20px;}
+h1, h2, h3, h4{margin-bottom: 20px; color: white;}
 p{font-size: 1.4em;margin-block-end: 1.2em;}
 img{width: 100%; height: auto;}
 
@@ -90,7 +90,7 @@ u .marker{position: absolute; left: 0; bottom: 0; width: 100%; height: 10px; ani
 
 /* Bubble
 --------------------------------------------------------------------------*/
-.bubble{position: absolute; z-index: 100; opacity: 0.3; transform: scale(0); border-radius: 50%; animation: bubble_animation 1s ease-out forwards;}
+.bubble{position: absolute; z-index: 2500; opacity: 0.3; transform: scale(0); border-radius: 50%; animation: bubble_animation 1s ease-out forwards;}
 .bubble--large{width: 500px; height: 500px; }
 .bubble--medium{width: 300px; height: 300px; }
 .bubble--small{width: 150px; height: 150px; }
@@ -121,16 +121,23 @@ u .marker{position: absolute; left: 0; bottom: 0; width: 100%; height: 10px; ani
 
 /* Dark Mode
 --------------------------------------------------------------------------*/
-#dark-mode-icon{position: fixed; bottom: 3vh; left: 3vh; font-size: 60px; cursor: pointer; z-index: 999; color: white; mix-blend-mode: difference;}
-#dark-mode-icon i {}
-.dark-mode{filter: invert(1)}
-.dark-mode--change{background-color: white;}
+#dark-mode-icon{position: fixed; bottom: 3vh; left: 3vh; font-size: 60px; cursor: pointer; z-index: 999; background-color: inherit;}
+#dark-mode-icon i {color: white; mix-blend-mode: difference;}
+.dark-mode{background-color: black;}
 
-.dark-mode .bubble,
-.dark-mode .red,
-.dark-mode .media-affix__item__image,
-.dark-mode .marker,
-.dark-mode .panel{filter: invert(1)}
+main,
+section,
+div{background-color: inherit;}
+
+h1, h2, h3, h4, p {color: white; mix-blend-mode: difference;}
+
+.bg-green #dark-mode-icon i,
+.bg-green h1,
+.bg-green h2,
+.bg-green h3,
+.bg-green h4,
+.bg-green p{mix-blend-mode: unset}
+
 
 @media (max-width: 425px) {
 	#dark-mode-icon{font-size: 40px;}
@@ -138,14 +145,14 @@ u .marker{position: absolute; left: 0; bottom: 0; width: 100%; height: 10px; ani
 
 /* Cover
 --------------------------------------------------------------------------*/
-.cover{position: relative; overflow: hidden; height: 100vh; min-width: 100vw; display: flex; align-items: center; justify-content: center;}
+.cover{ color: white; position: relative; overflow: hidden; height: 100vh; min-width: 100vw; display: flex; align-items: center; justify-content: center;}
 .cover__text{position: relative; z-index: 200;}
-.cover__text h1 {text-transform: capitalize; text-align: center; }
+.cover__text h1 {position: relative; z-index:300; text-transform: capitalize; text-align: center; }
 .cover__text p{margin-top: 50px; text-align: center;}
 .cover__text span{display: block}
 
 .cover__scroll{position: absolute; bottom: 3vh; display: flex; flex-direction: column; align-items: center }
-.cover__scroll__pointer{width: 10px; height: 10px; border-radius: 50%; background-color: black; animation: scroll_animation 2s infinite}
+.cover__scroll__pointer{width: 10px; height: 10px; border-radius: 50%; background-color: white; mix-blend-mode: difference; animation: scroll_animation 2s infinite}
 .cover__scroll p{font-size: 18px; margin-bottom: 40px; font-weight: 600; animation: scroll_text_animation 2s infinite; letter-spacing: 5px;}
 
 @keyframes scroll_animation {
@@ -166,10 +173,9 @@ u .marker{position: absolute; left: 0; bottom: 0; width: 100%; height: 10px; ani
 
 /* Media Affix
 --------------------------------------------------------------------------*/
-
 .media-affix{min-height: 100vh; display: flex; justify-content: space-between; flex-wrap: wrap; }
 .media-affix__title{ width: 40%; display: inline-block; margin-right: 9%;}
-.media-affix__container{ width: 50%; display: inline-block; vertical-align: top; background-color: white; position: relative;}
+.media-affix__container{ width: 50%; display: inline-block; vertical-align: top; position: relative;}
 
 .media-affix__item{position: relative; display: flex; justify-content: space-between; align-items: center;  }
 .media-affix__item__text{width: calc(100% - 300px);}
@@ -193,10 +199,11 @@ u .marker{position: absolute; left: 0; bottom: 0; width: 100%; height: 10px; ani
 
 /* Panel
 --------------------------------------------------------------------------*/
-.panel{height: 100vh; background-color: white; display: flex; justify-content: center; align-items: center; margin: 0 auto; transition: background-color 0.5s; transition-delay: 1s}
-.panel__text{width: 50%; color: white;}
-.panel__text h3{ width: 150%; position: relative; color: white;}
-.panel__image{width: 50%;}
+.panel{ width: 70%; display: flex; justify-content: space-between; align-items: center; margin: 0 auto;}
+.panel__text{width: 50%;}
+.panel__image{width: 40%;}
+
+
 
 
 
